design: prevent cell borders from overlapping

--- a/src/components/Grid/Grid.module.css
+++ b/src/components/Grid/Grid.module.css
@@ -12,12 +12,30 @@
 }
 
 .cell {
-  border: 1px solid var(--shade-color);
+  /* border: 1px solid var(--shade-color); */
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
   position: relative;
+  border-right: 1px solid var(--shade-color);
+  border-bottom: 1px solid var(--shade-color);
+}
+
+.cell.boldLeft {
+  border-left: 2px solid black;
+}
+
+.cell.boldTop {
+  border-top: 2px solid black;
+}
+
+.cell.boldRight {
+  border-right: 2px solid black;
+}
+
+.cell.boldBottom {
+  border-bottom: 2px solid black;
 }
 
 .cell-5 {
@@ -77,22 +95,6 @@
 
 .cell.crossed::after {
   transform: rotate(-45deg);
-}
-
-.cell.boldLeft {
-  border-left: 2px solid black;
-}
-
-.cell.boldTop {
-  border-top: 2px solid black;
-}
-
-.cell.boldRight {
-  border-right: 2px solid black;
-}
-
-.cell.boldBottom {
-  border-bottom: 2px solid black;
 }
 
 .header {
