--- a/src/components/Play/Play.module.css
+++ b/src/components/Play/Play.module.css
@@ -22,7 +22,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-weight: 500;
+  font-weight: bold;
 }
 
 .gridWrapper {
